fix: adjusted spacing

--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -26,8 +26,12 @@
   margin: 0 auto;
   padding: 20px 0;
 
+  ///&:first-of-type {
+  ///  margin-top: 20px;
+  ///}
+
   &:not(:first-of-type) {
-    margin-top: 20px;	
+    margin-top: 40px;
   }
 
   &:not(:last-of-type) {
